update backend url